<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    android:id="@+id/neighbour_details">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/details_neighbour_pic"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                android:background="?selectableItemBackground"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/details_neighbour_name_on_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="240dp"
                android:text="@string/details_neighbour_name"
                android:textColor="@android:color/white"
                android:textSize="34sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.CardView
                android:id="@+id/info_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_neighbour_pic">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp">

                    <TextView
                        android:id="@+id/details_neighbour_bio_name"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="@string/details_neighbour_name"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/details_neighbour_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:drawableStart="@drawable/ic_location"
                        android:drawablePadding="10dp"
                        android:text="@string/details_neighbour_address"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/details_neighbour_bio_name" />

                    <TextView
                        android:id="@+id/details_neighbour_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:drawableStart="@drawable/ic_phone"
                        android:drawablePadding="10dp"
                        android:text="@string/details_neighbour_contact"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/details_neighbour_address" />

                    <TextView
                        android:id="@+id/details_neighbour_site"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:drawableStart="@drawable/ic_site"
                        android:drawablePadding="10dp"
                        android:text="@string/details_neighbour_site"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/details_neighbour_contact" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:elevation="6dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_layout">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp">

                    <TextView
                        android:id="@+id/details_neighbour_infos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details_neighbour_infos"
                        android:textColor="@android:color/black"
                        android:textSize="22sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/details_neighbour_bio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/Loreum"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/details_neighbour_infos" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/details_favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="220dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@android:color/white"
                android:src="@drawable/ic_star_not_full"
                app:borderWidth="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>